created templates files

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,11 @@
     <title>Rajinder Thakur</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="images/favicon/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="76x76" href="static/images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="static/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="static/images/favicon/site.webmanifest">
+    <link rel="mask-icon" href="static//safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <meta name="msapplication-TileColor" content="#da532c">
@@ -20,101 +20,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="static/css/style.css" rel="stylesheet">
   </head>
   <body>
-  <header id="navbar-top" class="navbar-light w-100">
-    <div class="container">
-      <nav class="navbar navbar-expand-lg px-0">
-        <div class="container-fluid px-0">
-          <a class="navbar-brand" href="#"><img src="images/rajinder-logo.svg" alt="Logo" loading="lazy"></a>
-          <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item active position-relative">
-                <a class="nav-link" aria-current="page" href="#banner-sec">Home</a>
-              </li>
-              <li class="nav-item position-relative">
-                <a class="nav-link" href="#project-sec">Projects</a>
-              </li>
-              <li class="nav-item position-relative">
-                <a class="nav-link" href="#service-sec">Services</a>
-              </li>
-              <li class="nav-item position-relative">
-                <a class="nav-link" href="#toolbox-sec">Toolboox</a>
-              </li>
-              <li class="nav-item position-relative">
-                <a class="nav-link" href="#testimonial-sec">Testimonials</a>
-              </li>
-              <li class="nav-item position-relative">
-                <a class="nav-link" href="#contact-sec">Contact Us</a>
-              </li>
-            </ul>
-            <div class="workportal-icons">
-              <a href=""><i class="fa fa-behance" aria-hidden="true"></i></a>
-              <a href=""><i class="fa fa-dribbble" aria-hidden="true"></i></a>
-              <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-              <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-            </div>
-          </div>
-        </div>
-      </nav>
-    </div>
-  </header>
-   <!--  <nav id="navbar" class="navbar navbar-expand-lg">
-      <div class="container">
-        <a class="navbar-brand" href="#"><img src=""></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav">
-            <li class="nav-item active position-relative">
-              <a class="nav-link" href="#Home">Home</a>
-            </li>
-            <li class="nav-item position-relative">
-              <a class="nav-link" href="#Projects">Projects</a>
-            </li>
-            <li class="nav-item position-relative">
-              <a class="nav-link" href="#Services"></a>
-            </li>
-            <li class="nav-item position-relative">
-              <a class="nav-link" href="#MyToolBox"></a>
-            </li>
-            <li class="nav-item position-relative">
-              <a class="nav-link" href="#Testimonials"></a>
-            </li>
-            <li class="nav-item position-relative">
-              <a class="nav-link" href="#GetInTouch"></a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav> -->
-    <div id="banner-sec" class="top-banner-bg pt-5">
-      <div class="container">
-        <div class="top-banner row">
-          <div class="col-sm-12 col-md-12 col-lg-5">
-            <div class="banner-img position-relative">
-              <img src="images/banner-img.png" class="img-fluid">
-              <div class="circle"></div>
-            </div>
-          </div>
-          <div class="col-sm-12 col-md-12 col-lg-7">
-            <div class="banner-info">
-              <h1>Hi, i'm <span class="blue-color">Jone Lee</span> a Developer.</h1>
-              <p>I use animation as a third dimension by which to simplify experiences and kuiding thro each and every interaction. I’m not adding motion just to spruce things up, but doing it in ways that.</p>
-              <div class="btn-groups">
-                <a class="btn btn-primary mb-2" href="#">Request A Callback</a>
-                <a class="btn btn-outline-primary mb-2" href="#">Resume</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    {% include "header.html" %}
+     
+    {% include "banner.html" %}
     <div id="project-sec" class="projects main-sec">
       <div class="container">
         <div class="row">
@@ -125,7 +36,7 @@
           <div class="col-md-6">
             <div class="card projects-inner" data-bs-toggle="modal" data-bs-target="#projectsModal">
               <div class="cardImg">
-                <img class="card-img-top img-fluid" src="images/productOne.png" alt="Card image" style="width:100%">
+                <img class="card-img-top img-fluid" src="static/images/productOne.png" alt="Card image" style="width:100%">
               </div>
               <div class="card-body text">
                 <h5 class="card-title">iOS Development</h5>
@@ -136,7 +47,7 @@
           <div class="col-md-6">
             <div class="card projects-inner" data-bs-toggle="modal" data-bs-target="#projectsModal">
               <div class="cardImg">
-                <img class="card-img-top img-fluid" src="images/ProjectTwo.png" alt="Card image" style="width:100%">
+                <img class="card-img-top img-fluid" src="static/images/ProjectTwo.png" alt="Card image" style="width:100%">
               </div>
               <div class="card-body">
                 <h5 class="card-title">iOS Development</h5>
@@ -149,7 +60,7 @@
           <div class="col-md-6">
             <div class="card projects-inner" data-bs-toggle="modal" data-bs-target="#projectsModal">
               <div class="cardImg">
-                <img class="card-img-top img-fluid" src="images/ProjectThree.png" alt="Card image" style="width:100%">
+                <img class="card-img-top img-fluid" src="static/images/ProjectThree.png" alt="Card image" style="width:100%">
               </div>
               <div class="card-body">
                 <h5 class="card-title">iOS Development</h5>
@@ -160,7 +71,7 @@
           <div class="col-md-6">
             <div class="card projects-inner" data-bs-toggle="modal" data-bs-target="#projectsModal">
               <div class="cardImg">
-                <img class="card-img-top img-fluid" src="images/ProjectTwo.png" alt="Card image" style="width:100%">
+                <img class="card-img-top img-fluid" src="static/images/ProjectTwo.png" alt="Card image" style="width:100%">
               </div>
               <div class="card-body">
                 <h5 class="card-title">iOS Development</h5>
@@ -253,37 +164,37 @@
             <div class="myToolBox-inner text-center">
               <div class="row">
                 <div class="col-6">
-                  <img src="images/Html.svg">
+                  <img src="static/images/Html.svg">
                   <p><a href="javascript:void(0);" class="blue-color">Html5</a></p>
                 </div>
                 <div class="col-6">
-                  <img src="images/Css.svg">
+                  <img src="static/images/Css.svg">
                   <p><a href="javascript:void(0);" class="blue-color">CSS3</a></p>
                 </div>
                 <div class="col-6">
-                  <img src="images/Git.svg">
+                  <img src="static/images/Git.svg">
                   <p><a href="javascript:void(0);" class="blue-color">Git</a></p>
                 </div>
                 <div class="col-6">
-                  <img src="images/js.svg">
+                  <img src="static/images/js.svg">
                   <p><a href="javascript:void(0);" class="blue-color">JavaScript</a></p>
                 </div>
               </div>
               <div class="row mt-4">
                 <div class="col-6">
-                  <img src="images/Wordpress.svg">
+                  <img src="static/images/Wordpress.svg">
                   <p><a href="javascript:void(0);" class="blue-color">WordPress</a></p>
                 </div>
                 <div class="col-6">
-                  <img src="images/github.svg">
+                  <img src="static/images/github.svg">
                   <p><a href="javascript:void(0);" class="blue-color">Github</a></p>
                 </div>
                 <div class="col-6">
-                  <img src="images/dotnet.svg">
+                  <img src="static/images/dotnet.svg">
                   <p><a href="javascript:void(0);" class="blue-color">VS Code</a></p>
                 </div>
                 <div class="col-6">
-                  <img src="images/react.svg">
+                  <img src="static/images/react.svg">
                   <p><a href="javascript:void(0);" class="blue-color">React Js</a></p>
                 </div>
               </div>
@@ -291,7 +202,7 @@
           </div>
           <div class="col-sm-12 col-md-6 col-lg-6 ToolboxImg">
             <div class="myToolBoxImg-inner">
-              <img src="images/ToolboxImg.png" class="img-fluid">
+              <img src="static/images/ToolboxImg.png" class="img-fluid">
             </div>
           </div>
         </div>
@@ -642,7 +553,7 @@
           </div>
           <div class="col-sm-12 col-md-6 col-lg-6 ToolboxImg">
             <div class="getInTouchImg-inner">
-              <img src="images/Getintouch.png" class="img-fluid">
+              <img src="static/images/Getintouch.png" class="img-fluid">
             </div>
           </div>
         </div>
@@ -655,7 +566,7 @@
             <div class="row">
               <div class="col-6 col-sm-6 col-md-3">
                 <div class="logo-illus">
-                  <img src="images/logo-illustration.svg" alt="" loading="lazy">
+                  <img src="static/images/logo-illustration.svg" alt="" loading="lazy">
                 </div>
               </div>
               <div class="col-6 col-sm-6 col-md-3">
@@ -738,13 +649,13 @@
                   </div>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img src="images/productOne.png" class="d-block w-100" alt="...">
+                      <img src="static/images/productOne.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <img src="images/ProjectTwo.png" class="d-block w-100" alt="...">
+                      <img src="static/images/ProjectTwo.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <img src="images/ProjectThree.png" class="d-block w-100" alt="...">
+                      <img src="static/images/ProjectThree.png" class="d-block w-100" alt="...">
                     </div>
                   </div>
                 </div>
@@ -761,24 +672,24 @@
                     <h4 class="mb-3">Tools</h4>
                     <ul>
                       <li>
-                        <img src="images/Html.svg">
+                        <img src="static/images/Html.svg">
                         <a href="">Html5</a>
                       </li>
                       <li>
-                        <img src="images/Css.svg">
+                        <img src="static/images/Css.svg">
                         <a href="">CSS3</a>
                       </li>
                       <li>
-                        <img src="images/Git.svg">
+                        <img src="static/images/Git.svg">
                         <a href="">Git</a>
                       </li>
                       <li>
-                        <img src="images/js.svg"><a href="">JavaScript</a>
+                        <img src="static/images/js.svg"><a href="">JavaScript</a>
                       </li>
-                      <li><img src="images/Wordpress.svg"><a href="">WordPress</a></li>
-                      <li><img src="images/github.svg"><a href="">Github</a></li>
-                      <li><img src="images/dotnet.svg"><a href="">VS Code</a></li>
-                      <li><img src="images/react.svg"><a href="">React Js</a></li>
+                      <li><img src="static/images/Wordpress.svg"><a href="">WordPress</a></li>
+                      <li><img src="static/images/github.svg"><a href="">Github</a></li>
+                      <li><img src="static/images/dotnet.svg"><a href="">VS Code</a></li>
+                      <li><img src="static/images/react.svg"><a href="">React Js</a></li>
                     </ul>
                   </div>
                 </div>
